--- a/1GAMClouds.vcxproj
+++ b/1GAMClouds.vcxproj
@@ -84,17 +84,21 @@
   <ItemGroup>
     <ClCompile Include="Cloud.cpp" />
     <ClCompile Include="CloudSpawner.cpp" />
+    <ClCompile Include="DangerCloud.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="ScoreCounter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cloud.h" />
     <ClInclude Include="CloudSpawner.h" />
+    <ClInclude Include="DangerCloud.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GlobalVariables.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="ScoreCounter.h" />
     <ClInclude Include="UtilityFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
